--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <html>
 <head>
-    <!-- Load the latest Swagger UI code and style from npm using unpkg.com -->
-    <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css"/>
-    <title>My New API</title>
+    <title>API</title>
 </head>
+
 <body>
-<div id="swagger-news"></div> <!-- Div to hold the UI component -->
 <script>
-    window.onload = function () {
-        // Begin Swagger UI call region
-        const ui = SwaggerUIBundle({
-            url: "swagger-news-api.json", //Location of Open API spec in the repo
-            dom_id: '#swagger-news',
-            deepLinking: true,
-            presets: [
-                SwaggerUIBundle.presets.apis,
-                SwaggerUIBundle.SwaggerUIStandalonePreset
-            ],
-            plugins: [
-                SwaggerUIBundle.plugins.DownloadUrl
-            ],
-        })
-        window.ui = ui
-    }
+    window.location.href = "news.html";
 </script>
 </body>
 </html>
